# vector-aligned

./: README.md  vector-aligned.cabal
src/Data/Vector/Storable/: Aligned.hs
tests/: Tests.hs
