name:                vector-aligned
version:             0.1.0.0
synopsis:            Aligned Storable Vectors.
description:         Allocate Storable Vectors at specified memory alignments.
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (C) 2013 Anthony Cowley
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Vector.Storable.Aligned
  other-extensions:    ScopedTypeVariables
  build-depends:       base >=4.6 && < 4.7, 
                       primitive >=0.5 && < 0.6,
                       vector >=0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs
  default-language: Haskell2010
  build-depends: base >= 4.6 && < 5,
                 vector >= 0.10,
                 vector-aligned,
                 tasty, tasty-hunit, HUnit
